@@ -16,6 +16,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class RestaurantDataAccessMapper {
@@ -23,7 +24,7 @@ public class RestaurantDataAccessMapper {
     public List<UUID> restaurantToRestaurantProducts(Restaurant restaurant) {
         return restaurant.getOrderDetail().getProducts().stream()
                 .map(product -> product.getId().getValue())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Restaurant restaurantEntityToRestaurant(List<RestaurantEntity> restaurantEntities) {
@@ -31,14 +32,14 @@ public class RestaurantDataAccessMapper {
                 restaurantEntities.stream().findFirst().orElseThrow(() ->
                         new RestaurantDataAccessException("No restaurants found!"));
 
-        List<Product> restaurantProducts = restaurantEntities.stream().map(r ->
+        List<Product> restaurantProducts = restaurantEntities.stream().map(entity ->
                         Product.builder()
-                                .productId(new ProductId(r.getProductId()))
-                                .name(r.getProductName())
-                                .price(new Money(r.getProductPrice()))
-                                .isAvailable(r.getProductAvailable())
+                                .productId(new ProductId(entity.getProductId()))
+                                .name(entity.getProductName())
+                                .price(new Money(entity.getProductPrice()))
+                                .available(entity.getProductAvailable())
                                 .build())
-                .toList();
+                .collect(Collectors.toList());
 
         return Restaurant.builder()
                 .restaurantId(new RestaurantId(restaurantEntity.getRestaurantId()))
@@ -54,7 +55,7 @@ public class RestaurantDataAccessMapper {
                 .id(orderApproval.getId().getValue())
                 .restaurantId(orderApproval.getRestaurantId().getValue())
                 .orderId(orderApproval.getOrderId().getValue())
-                .status(orderApproval.getOrderApprovalStatus())
+                .status(orderApproval.getApprovalStatus())
                 .build();
     }
 
@@ -63,7 +64,8 @@ public class RestaurantDataAccessMapper {
                 .orderApprovalId(new OrderApprovalId(orderApprovalEntity.getId()))
                 .restaurantId(new RestaurantId(orderApprovalEntity.getRestaurantId()))
                 .orderId(new OrderId(orderApprovalEntity.getOrderId()))
-                .orderApprovalStatus(orderApprovalEntity.getStatus())
+                .approvalStatus(orderApprovalEntity.getStatus())
                 .build();
     }
+
 }
